--- a/chamadoscmc/templates/core/detail.html
+++ b/chamadoscmc/templates/core/detail.html
@@ -392,7 +392,7 @@
     }
 
     function volta_detalhes(id_chamado) {
-        $(location).attr('href', '/chamado/detalhe/' + id_chamado + '/');
+        $(location).attr('href', '/chamado/edita/' + id_chamado + '/');
     }
 
     function atende(id_chamado) {
