adicionado fonte ttf para imprimir caracteres especiais, correção duplicidade selecione combobox servico (closes #219)

--- a/chamadoscmc/templates/core/new.html
+++ b/chamadoscmc/templates/core/new.html
@@ -33,7 +33,7 @@
 	$(document).ready(function () {
 
 		atualizaGrupoServico();
-		atualizaServico();
+		//atualizaServico();
 		atualizaLocalizacao();
 		atualizaPavimento();
 
@@ -120,6 +120,7 @@
 				    toAppend = '<option value="0">----------</option>'
                 }
                 */
+                console.log(toAppend);
                 $('#id_servico').append(toAppend);
                 setaPatrimonio();
 
